Bug 120485 - Can't delete folders on IMAP server cascadely.  Fixed by henry.jia@sun.com.  a=jdunn@netscape.com